fix(toc): correct type, spacing for links

--- a/src/_sass/pages/_how-to-go-contactless.scss
+++ b/src/_sass/pages/_how-to-go-contactless.scss
@@ -44,12 +44,19 @@
     }
   }
 
-  .go-contactless--how-to {
-    .toc {
-      .toc-container {
-        position: sticky;
-        position: -webkit-sticky;
-        top: -1px;
+  .toc {
+    .toc-container {
+      position: sticky;
+      position: -webkit-sticky;
+      top: 0;
+      .h4 {
+        font-family: var(--bs-body-font-family) !important;
+        padding: 12px 0;
+        margin: 0;
+      }
+      li {
+        padding: 12px 0;
+        margin: 0;
       }
     }
   }
@@ -90,9 +97,18 @@
       }
       ul {
         border-top-color: white;
+        li {
+          padding: 12px 0;
+          margin: 0;
+        }
+        .dropdown-item-text {
+          margin: 0;
+          padding: 0 16px;
+        }
         .h5 a {
           color: $primary;
           white-space: break-spaces;
+          padding: 0 16px;
         }
       }
     }
